# livraria-djangoapi-jwt

./: README.md  db.sqlite3  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor_livro.py
livraria/: asgi.py  settings.py  urls.py  wsgi.py
